tweaks nav on mobile, tweaks js to make sure project name in nav is highlighted as screen is resized

--- a/scss/main-styles.scss
+++ b/scss/main-styles.scss
@@ -92,17 +92,22 @@ nav{
   width: 100%;
   display: flex;
   justify-content: space-around;
-  h1{
+  p{
     margin: 0;
+    margin-bottom:2rem;
     text-align: center;
     width: 50%;
     height: 100%;
-    cursor: pointer;
   font-weight: lighter;
+  }
+  .navToggles{
+    cursor: pointer;
   }
 }
 .nav__list{
-  display: none;
+  opacity: 0;
+  left: -100%;
+  position: absolute;
 }
 
 @media screen and (min-width: 640px){
@@ -163,10 +168,13 @@ img.showImg.twitter_logo{
 }
 
 nav{
-  h1{display: none;}
+  p{display: none;}
   display: block;
 }
 .nav__list{
+  opacity: 1;
+  left: 0;
+  position: relative;
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
